<!--
    Artem Tsurkan, n01414146
    Wenyuan Yu, n01403697
    Kyrylo Lvov, n01414058
    Software Project - CENG-322-0NA
-->
<resources>
    <string name="app_name">Housefy</string>
    <string name="app_description">Smart Home Environment and Energy Monitoring System</string>
    <string name="nav_header_title">Welcome back!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_air_conditioner">Climate Manager</string>
    <string name="menu_air_quality">Air Quality Monitor</string>
    <string name="menu_smart_light">Light Control</string>
    <string name="menu_energy_consumption">Energy Consumption</string>

    <string name="screen_text_home">This is home fragment</string>
    <string name="screen_text_air_conditioner">This is air conditioner fragment</string>
    <string name="screen_text_air_quality">This is air quality fragment</string>
    <string name="screen_text_smart_light">This is smart light fragment</string>
    <string name="screen_text_energy_consumption">This is energy consumption fragment</string>


    <string name="exit_dialog_title">Exit?</string>
    <string name="exit_dialog_text">Are you sure you want to exit the application?</string>
    <string name="API_Index">30</string>
    <string name="aqi_label">AQI</string>
    <string name="aqi_history_label">Last Week\'s Average Air Quality Index</string>
    <string name="air_quality_bar_chart_label">Air Quality History</string>
    <string name="AQI_level_good">Good</string>
    <string name="AQI_level_fair">Fair</string>
    <string name="AQI_level_terrible">Terrible</string>
    <string name="AQI_Bar_Chart_Data_Statstics">Fill</string>
    <string name="AQI_Bar_Chart_Data_Statstics1">Actual</string>
    <string name="user_avatar">User Avatar</string>
    <string name="welcome">Welcome!</string>
    <string name="horizontal_orientation">Horizontal Orientation</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="temperature_threshold">Temperature Threshold</string>
    <string name="air_quality_threshold">Air Quality Threshold</string>
    <string name="request_permission">Request permission</string>
    <string name="smart_light">Smart Light</string>
    <string name="light_bulb_image">Light Bulb Image</string>
    <string name="brightness">Brightness</string>
    <string name="bulb_icon">Bulb Icon</string>
    <string name="smart_ac">Smart AC</string>
    <string name="today_s_date">Today\'s date:</string>
    <string name="room_temperature">Room Temperature</string>
    <string name="settings">Settings</string>
    <string name="quick_guide">Quick Guide</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_rejected">Permission rejected</string>
    <string name="permission_already_granted">Permission already granted</string>
    <string name="smart_home_control">Smart Home Control</string>
    <string-array name="Days_of_Week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
</resources>