<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_air_conditioner"
            android:title="@string/menu_air_conditioner" />
        <item
            android:id="@+id/nav_air_quality"
            android:title="@string/menu_air_quality" />
        <item
            android:id="@+id/nav_smart_light"
            android:title="@string/menu_smart_light" />
        <item
            android:id="@+id/nav_energy_consumption"
            android:title="@string/menu_energy_consumption" />
    </group>
</menu>