<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_settings"
        android:title="@string/settings"
        android:icon="@drawable/settings"
        app:showAsAction="always"
        app:actionLayout="@layout/menu_item_settings" />

    <item
        android:id="@+id/menu_guide"
        android:orderInCategory="100"
        android:title="@string/quick_guide"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_feedback"
        android:orderInCategory="100"
        android:title="@string/feedback"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>